--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Casamento João & Rayane</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/config.js" defer></script>
   <script src="js/countdown.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1>João Vitor & Rayane</h1>
-    <p>29 de Abril de 2028</p>
-    <p><strong>Traje:</strong> Esporte fino</p>
-  </header>
 
-  <section id="countdown">
-    <h2>Contagem Regressiva</h2>
-    <div id="timer"></div>
+  <!-- Monograma -->
+  <section id="monograma" style="text-align:center; margin-top:30px;">
+    <img src="img/monograma.png" alt="Monograma dos Noivos" style="height:5cm;">
   </section>
 
-  <section id="menu">
-    <nav>
-      <a href="pages/rsvp.html">Confirme sua Presença</a> |
-      <a href="pages/gallery.html">Galeria</a> |
-      <a href="pages/gifts.html">Presentes</a> |
-      <a href="pages/cronograma.html">Cronograma</a>
-    </nav>
+  <!-- Nomes -->
+  <section id="nomes" style="text-align:center; margin-top:20px;">
+    <h1 style="font-family:'Dancing Script', cursive; font-size:14px;">
+      João Vitor & Rayane
+    </h1>
   </section>
 
-  <section id="mapa">
-    <h2>Local da Cerimônia</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="300" style="border:0;" allowfullscreen></iframe>
+  <!-- Data -->
+  <section id="data" style="text-align:center; margin:10px 0;">
+    <h2 style="font-size:20px;">29 de Abril de 2028</h2>
   </section>
+
+  <!-- Contagem Regressiva -->
+  <section id="countdown" style="text-align:center; margin:40px 0;">
+    <h2>Faltam...</h2>
+    <div id="timer" style="font-size:22px; font-weight:bold;"></div>
+  </section>
+
+  <!-- Menu de acessos -->
+  <section id="menu" style="text-align:center; margin-top:50px;">
+    <a href="pages/rsvp.html" class="btn">Confirmar Presença</a>
+    <a href="pages/gifts.html" class="btn">Lista de Presentes</a>
+    <a href="pages/cronograma.html" class="btn">Localização & Cronograma</a>
+    <a href="pages/gallery.html" class="btn">Galeria</a>
+  </section>
+
 </body>
 </html>
