--- a/pages/rsvp.html
+++ b/pages/rsvp.html
@@ -2,24 +2,75 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>RSVP - João & Rayane</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Confirmação de Presença - João & Rayane</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      margin: 0;
+      padding: 20px;
+      background: #fff;
+      color: #333;
+      text-align: center;
+    }
+    h1 {
+      color: #4a6b51;
+      font-size: 28px;
+    }
+    form {
+      max-width: 500px;
+      margin: auto;
+      background: #f5f5f5;
+      padding: 20px;
+      border-radius: 12px;
+    }
+    input, select, textarea, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background: #4a6b51;
+      color: #fff;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #36533e;
+    }
+    .prazo {
+      margin-top: 15px;
+      color: #4a6b51;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h1>Confirme sua presença</h1>
-  <form>
-    <label>Digite seu nome:</label><br>
-    <input type="text" name="nome" required><br><br>
 
-    <label>Telefone:</label><br>
-    <input type="tel" name="telefone" required><br><br>
+  <h1>Confirmação de Presença</h1>
+  <p>Por favor, confirme sua presença até <strong>20/03/2028</strong></p>
 
-    <label>Quantidade de acompanhantes:</label><br>
-    <input type="number" min="0" max="5"><br><br>
+  <form action="https://docs.google.com/forms/d/e/FORM_ID/formResponse" method="post" target="_blank">
+    <input type="text" name="nome" placeholder="Digite seu nome" required>
+    <input type="tel" name="telefone" placeholder="Telefone para contato" required>
+    <input type="number" name="acompanhantes" placeholder="Quantidade de acompanhantes" min="0">
 
-    <label>Comentário:</label><br>
-    <textarea></textarea><br><br>
+    <input type="text" name="nomesAcompanhantes" placeholder="Nome(s) dos acompanhantes">
 
-    <button type="submit">Confirmar</button>
+    <select name="confirmacao" required>
+      <option value="">Selecione...</option>
+      <option value="Sim">Confirmo presença</option>
+      <option value="Não">Infelizmente não poderei ir</option>
+    </select>
+
+    <textarea name="comentario" placeholder="Deixe um comentário (opcional)"></textarea>
+
+    <button type="submit">Enviar Confirmação</button>
   </form>
+
+  <p class="prazo">Aguardamos você no grande dia 💚</p>
+
 </body>
 </html>
