Atualizar o gifts.html

--- a/pages/gifts.html
+++ b/pages/gifts.html
@@ -1,18 +1,71 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Presentes - João & Rayane</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de Presentes - João & Rayane</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      margin: 0;
+      padding: 20px;
+      background: #fff;
+      color: #333;
+      text-align: center;
+    }
+    h1 {
+      color: #4a6b51;
+      font-size: 28px;
+    }
+    .presente {
+      background: #f5f5f5;
+      padding: 15px;
+      margin: 15px auto;
+      max-width: 500px;
+      border-radius: 12px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 10px;
+      background: #4a6b51;
+      color: #fff;
+      text-decoration: none;
+      padding: 10px 15px;
+      border-radius: 8px;
+    }
+    a:hover {
+      background: #36533e;
+    }
+    .pix {
+      background: #e8f5e9;
+      padding: 20px;
+      margin: 30px auto;
+      border-radius: 12px;
+      max-width: 500px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Lista de Presentes</h1>
-  <h2>Chave PIX</h2>
-  <p><strong>CHAVE_PIX_AQUI</strong></p>
 
-  <h2>Presentes sugeridos</h2>
-  <ul>
-    <li>Cota Lua de Mel - R$200</li>
-    <li>Jantar especial - R$150</li>
-  </ul>
+  <h1>Lista de Presentes</h1>
+  <p>Escolha um presente ou contribua via PIX 💚</p>
+
+  <div class="presente">
+    <h3>Lua de Mel - Cota R$ 200</h3>
+    <a href="https://linkparapresente.com" target="_blank">Comprar Online</a>
+  </div>
+
+  <div class="presente">
+    <h3>Item da Casa - R$ 150</h3>
+    <a href="https://linkparaloja.com" target="_blank">Comprar Online</a>
+  </div>
+
+  <div class="pix">
+    <h2>Contribua via PIX</h2>
+    <p>Chave PIX: <strong>(inserir chave depois)</strong></p>
+    <p>Deixe uma mensagem carinhosa junto com sua contribuição 💌</p>
+  </div>
+
 </body>
 </html>
