--- a/pages/cronograma.html
+++ b/pages/cronograma.html
@@ -3,70 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cronograma | João & Rayane</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <title>Cronograma - João & Rayane</title>
   <style>
-    .banner {
-      width: 100%;
-      height: 60vh;
-      background: url("../images/local.jpg") no-repeat center center/cover;
-    }
-    .conteudo {
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fff;
+      color: #333;
       text-align: center;
-      padding: 30px;
-      max-width: 800px;
-      margin: auto;
     }
-    .local {
-      font-size: 24px;
-      font-weight: bold;
+    .banner {
+      background: url("images/localigreja.png") center/cover no-repeat;
+      width: 100%;
+      height: 300px;
+    }
+    .content {
+      padding: 30px 20px;
+    }
+    h1 {
+      font-size: 26px;
       color: #4a6b51;
+      margin-bottom: 10px;
+    }
+    .mapa {
       margin: 20px 0;
     }
     iframe {
       width: 100%;
-      height: 400px;
+      max-width: 600px;
+      height: 350px;
       border: none;
-      border-radius: 12px;
-      margin-bottom: 30px;
+      border-radius: 10px;
     }
-    .horarios {
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 20px 0;
+    }
+    ul li {
       font-size: 18px;
-      line-height: 1.8;
+      margin: 8px 0;
       color: #333;
-      margin-bottom: 40px;
     }
     .mensagem {
-      font-size: 20px;
-      color: #4a6b51;
-      font-weight: bold;
       margin-top: 30px;
+      font-size: 18px;
+      color: #4a6b51;
+      font-style: italic;
+    }
+    a.voltar {
+      display: inline-block;
+      margin-top: 20px;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      font-weight: bold;
+      background: #4a6b51;
+      color: #fff;
+      transition: 0.3s;
+      border: 2px solid #4a6b51;
+    }
+    a.voltar:hover {
+      background: #fff;
+      color: #4a6b51;
     }
   </style>
 </head>
 <body>
-
-  <!-- Banner com imagem -->
   <div class="banner"></div>
 
-  <!-- Conteúdo -->
-  <div class="conteudo">
-    <!-- Local -->
-    <div class="local">Fazenda Paraíso - Serra Catarinense</div>
+  <div class="content">
+    <h1>Fazenda Paraíso - Serra Catarinense</h1>
 
-    <!-- Mapa Google -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.2602781940704!2d-49.7131261!3d-27.9757349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e013b2c89f57d9%3A0x9ad1e7af7c5ff6a5!2sSerra%20Catarinense!5e0!3m2!1spt-BR!2sbr!4v1700000000000!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    <!-- Horários -->
-    <div class="horarios">
-      <p><strong>14:30h</strong> – Cerimônia</p>
-      <p><strong>16:30h</strong> – Brunch</p>
-      <p><strong>20:00h</strong> – After</p>
+    <div class="mapa">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3481.170249499726!2d-49.5882589!3d-28.3095552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e1b73a9d6c5a6f%3A0x4f03f0b20f6c1c69!2sSerra%20Catarinense!5e0!3m2!1spt-BR!2sbr!4v1705097860201!5m2!1spt-BR!2sbr" allowfullscreen=""></iframe>
     </div>
 
-    <!-- Mensagem -->
-    <div class="mensagem">Estamos contando os dias para celebrar com você. 💚<br>Aguardamos sua presença!</div>
-  </div>
+    <ul>
+      <li>14:30h – Cerimônia</li>
+      <li>16:30h – Brunch</li>
+      <li>20:00h – After</li>
+    </ul>
 
+    <div class="mensagem">
+      Aguardamos com muito carinho a sua presença nesse dia especial 💚
+    </div>
+
+    <a href="index.html" class="voltar">⬅ Voltar ao Início</a>
+  </div>
 </body>
 </html>
