--- a/pages/gifts.html
+++ b/pages/gifts.html
@@ -1,71 +1,73 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lista de Presentes - João & Rayane</title>
+  <title>Lista de Presentes</title>
   <style>
     body {
-      font-family: Georgia, serif;
-      margin: 0;
-      padding: 20px;
+      font-family: Arial, sans-serif;
       background: #fff;
-      color: #333;
+      margin: 0;
       text-align: center;
+      color: #333;
     }
-    h1 {
-      color: #4a6b51;
-      font-size: 28px;
+    header {
+      background: #4a6b51;
+      color: white;
+      padding: 20px;
+      font-size: 24px;
+      font-weight: bold;
     }
-    .presente {
-      background: #f5f5f5;
-      padding: 15px;
-      margin: 15px auto;
-      max-width: 500px;
-      border-radius: 12px;
+    form {
+      margin: 30px auto;
+      padding: 20px;
+      max-width: 400px;
+      background: #f9f9f9;
+      border-radius: 15px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
     }
-    a {
-      display: inline-block;
-      margin-top: 10px;
+    form input, form textarea, form select {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+    form button {
+      padding: 12px;
+      border-radius: 25px;
       background: #4a6b51;
       color: #fff;
-      text-decoration: none;
-      padding: 10px 15px;
-      border-radius: 8px;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
     }
-    a:hover {
-      background: #36533e;
-    }
-    .pix {
-      background: #e8f5e9;
-      padding: 20px;
-      margin: 30px auto;
-      border-radius: 12px;
-      max-width: 500px;
+    form button:hover {
+      background: #fff;
+      color: #4a6b51;
+      border: 2px solid #4a6b51;
     }
   </style>
 </head>
 <body>
+  <header>🎁 Lista de Presentes</header>
+  <p>Você pode escolher um presente especial ou contribuir com nossa lua de mel 💚</p>
 
-  <h1>Lista de Presentes</h1>
-  <p>Escolha um presente ou contribua via PIX 💚</p>
+  <form>
+    <input type="text" placeholder="Seu nome" required>
+    <input type="text" placeholder="Nome dos acompanhantes (se houver)">
+    <textarea placeholder="Observação ou mensagem" rows="4"></textarea>
+    <select>
+      <option selected disabled>Selecione um presente</option>
+      <option value="pix">Contribuir com PIX</option>
+      <option value="cota">Cota Lua de Mel (R$200)</option>
+      <option value="loja">Presentes em lojas online</option>
+    </select>
+    <button type="submit">Enviar Presente 💌</button>
+  </form>
 
-  <div class="presente">
-    <h3>Lua de Mel - Cota R$ 200</h3>
-    <a href="https://linkparapresente.com" target="_blank">Comprar Online</a>
-  </div>
-
-  <div class="presente">
-    <h3>Item da Casa - R$ 150</h3>
-    <a href="https://linkparaloja.com" target="_blank">Comprar Online</a>
-  </div>
-
-  <div class="pix">
-    <h2>Contribua via PIX</h2>
-    <p>Chave PIX: <strong>(inserir chave depois)</strong></p>
-    <p>Deixe uma mensagem carinhosa junto com sua contribuição 💌</p>
-  </div>
-
+  <p><a href="index.html">⬅ Voltar ao Início</a></p>
 </body>
 </html>
