--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -3,183 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galeria | João & Rayane</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <title>Galeria de Fotos</title>
   <style>
     body {
-      font-family: 'Georgia', serif;
-      background-color: #fff;
-      color: #333;
+      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
+      background: #fff;
+      color: #333;
       text-align: center;
     }
-
-    h1 {
-      color: #4a6b51;
-      margin-top: 20px;
-    }
-
-    /* Navegação de álbuns */
-    .tabs {
-      display: flex;
-      justify-content: center;
-      margin: 20px 0;
-    }
-
-    .tab {
+    header {
       background: #4a6b51;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      margin: 0 5px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .tab:hover {
-      background: #36533e;
-    }
-
-    .tab.active {
-      background: #2d422f;
-    }
-
-    /* Galeria */
-    .album {
-      display: none;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      color: white;
       padding: 20px;
-      max-width: 1000px;
-      margin: auto;
+      font-size: 24px;
+      font-weight: bold;
     }
-
-    .album.active {
+    .gallery {
       display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      padding: 20px;
     }
-
-    .foto {
-      border: 1px solid #ccc;
-      border-radius: 12px;
+    .card {
+      background: #f9f9f9;
+      border-radius: 15px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
       overflow: hidden;
-      background: #fafafa;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: 0.3s;
     }
-
-    .foto img {
+    .card:hover {
+      transform: scale(1.05);
+    }
+    .card img {
       width: 100%;
-      height: auto;
-      display: block;
+      height: 180px;
+      object-fit: cover;
     }
-
-    .legenda {
-      padding: 10px;
+    .card p {
+      margin: 10px;
       font-size: 14px;
-      color: #333;
-    }
-
-    .acoes {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 10px 10px;
-    }
-
-    .like {
-      cursor: pointer;
-      font-size: 20px;
-      color: #ccc;
-      transition: color 0.3s;
-    }
-
-    .like.active {
-      color: red;
-    }
-
-    .baixar {
-      font-size: 14px;
-      background: #4a6b51;
-      color: #fff;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    .baixar:hover {
-      background: #36533e;
+      color: #555;
     }
   </style>
 </head>
 <body>
+  <header>📸 Nossa Galeria</header>
+  <p>Veja os momentos mais especiais e compartilhe suas fotos 💚</p>
 
-  <h1>Galeria de Memórias</h1>
-
-  <!-- Abas de navegação -->
-  <div class="tabs">
-    <button class="tab active" onclick="mostrarAlbum('prewedding')">Pré-Wedding</button>
-    <button class="tab" onclick="mostrarAlbum('cerimonia')">Cerimônia</button>
-    <button class="tab" onclick="mostrarAlbum('festa')">Festa</button>
-  </div>
-
-  <!-- Álbum Pré-Wedding -->
-  <div id="prewedding" class="album active">
-    <div class="foto">
-      <img src="../images/pre1.jpg" alt="Pré-Wedding 1">
-      <div class="legenda">Sessão pré-wedding 1</div>
-      <div class="acoes">
-        <span class="like" onclick="toggleLike(this)">❤️</span>
-        <button class="baixar">Baixar</button>
-      </div>
+  <div class="gallery">
+    <div class="card">
+      <img src="images/exemplo1.jpg" alt="Foto da cerimônia">
+      <p>Cerimônia</p>
     </div>
-    <div class="foto">
-      <img src="../images/pre2.jpg" alt="Pré-Wedding 2">
-      <div class="legenda">Sessão pré-wedding 2</div>
-      <div class="acoes">
-        <span class="like" onclick="toggleLike(this)">❤️</span>
-        <button class="baixar">Baixar</button>
-      </div>
+    <div class="card">
+      <img src="images/exemplo2.jpg" alt="Foto da festa">
+      <p>Festa</p>
+    </div>
+    <div class="card">
+      <img src="images/exemplo3.jpg" alt="Pré-Wedding">
+      <p>Pré-Wedding</p>
     </div>
   </div>
 
-  <!-- Álbum Cerimônia -->
-  <div id="cerimonia" class="album">
-    <div class="foto">
-      <img src="../images/cer1.jpg" alt="Cerimônia 1">
-      <div class="legenda">Cerimônia - Entrada dos noivos</div>
-      <div class="acoes">
-        <span class="like" onclick="toggleLike(this)">❤️</span>
-        <button class="baixar">Baixar</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Álbum Festa -->
-  <div id="festa" class="album">
-    <div class="foto">
-      <img src="../images/festa1.jpg" alt="Festa 1">
-      <div class="legenda">Festa - Pista de dança</div>
-      <div class="acoes">
-        <span class="like" onclick="toggleLike(this)">❤️</span>
-        <button class="baixar">Baixar</button>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    function mostrarAlbum(id) {
-      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
-      document.querySelectorAll('.album').forEach(album => album.classList.remove('active'));
-
-      document.querySelector(`[onclick="mostrarAlbum('${id}')"]`).classList.add('active');
-      document.getElementById(id).classList.add('active');
-    }
-
-    function toggleLike(element) {
-      element.classList.toggle("active");
-    }
-  </script>
+  <p><a href="index.html">⬅ Voltar ao Início</a></p>
 </body>
 </html>
